// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense summary with multiple expense to the dashboard 1`] = `
<div>
  <h1>
    Veiwing 
    10
     
    expenses
     totalling 
    $310.00
  </h1>
</div>
`;

exports[`should render Expense summary with one expense to the dashboard 1`] = `
<div>
  <h1>
    Veiwing 
    1
     
    expense
     totalling 
    $30.00
  </h1>
</div>
`;
